cabal-version:      2.4
name:               him
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jay
maintainer:         janlely@163.com


-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable him
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , base ^>=4.14.3.0
        , unix >= 2.7.2.2
        -- , terminal-size >= 0.3.3
        , ansi-terminal >= 0.11.3
        , lens >= 5.2
        , text >= 2
        , vector >= 0.13
        , bytestring >= 0.11.3.1
        , containers >= 0.6
        , hashable >= 1.4

    other-modules:
          Him.Args
        , Him.Cursor
        , Him.Key
        , Him.State
        , Him.Action

    default-extensions:
        BinaryLiterals
        TemplateHaskell
        BangPatterns
        OverloadedStrings

    hs-source-dirs:   app
    default-language: Haskell2010
